bindings/rust/mbink-sys/src/lib.rs

#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(non_upper_case_globals)]

use std::ffi::{c_char, c_int, c_void};

#[cfg(not(all(target_os = "windows", mbink_runtime_load)))]
use std::{env, path::PathBuf, sync::OnceLock};

#[cfg(all(target_os = "windows", mbink_runtime_load))]
mod windows_runtime;

#[cfg(all(target_os = "windows", mbink_runtime_load))]
pub use windows_runtime::*;

pub enum MBinkWindow {}
pub type MBinkHandle = *mut MBinkWindow;

pub enum MBinkSharedObject {}
pub type MBinkSharedHandle = *mut MBinkSharedObject;

pub enum MBinkLogViewObject {}
pub type MBinkLogViewHandle = *mut MBinkLogViewObject;

pub enum MBinkTerminalObject {}
pub type MBinkTerminalHandle = *mut MBinkTerminalObject;

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBinkError {
    MBINK_OK = 0,
    MBINK_ERROR_INVALID_HANDLE = -1,
    MBINK_ERROR_INVALID_PARAM = -2,
    MBINK_ERROR_NOT_FOUND = -3,
    MBINK_ERROR_TYPE_MISMATCH = -4,
    MBINK_ERROR_OUT_OF_RANGE = -5,
    MBINK_ERROR_JS_ERROR = -6,
    MBINK_ERROR_UNKNOWN = -99,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBinkType {
    MBINK_TYPE_NULL = 0,
    MBINK_TYPE_BOOL = 1,
    MBINK_TYPE_INT = 2,
    MBINK_TYPE_DOUBLE = 3,
    MBINK_TYPE_STRING = 4,
    MBINK_TYPE_ARRAY = 5,
    MBINK_TYPE_OBJECT = 6,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBinkLifecycleState {
    MBINK_LIFECYCLE_CREATED = 0,
    MBINK_LIFECYCLE_LOADED = 1,
    MBINK_LIFECYCLE_RUNNING = 2,
    MBINK_LIFECYCLE_CLOSE_REQUESTED = 3,
    MBINK_LIFECYCLE_STOPPED = 4,
    MBINK_LIFECYCLE_DESTROYED = 5,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum MBinkObserveKind {
    MBINK_OBSERVE_CONSOLE = 1,
    MBINK_OBSERVE_ERROR = 2,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBinkConfig {
    pub title: *const c_char,
    pub width: c_int,
    pub height: c_int,
    pub headless: bool,
    pub borderless: bool,
    pub transparent: bool,
    pub always_on_top: bool,
    pub resizable: bool,
    pub gpu: bool,
    pub fullscreen: bool,
    pub resize_border_width: c_int,
    pub min_width: c_int,
    pub min_height: c_int,
    pub max_width: c_int,
    pub max_height: c_int,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBinkRuntimeOptions {
    pub runtime_epoch: *const c_char,
    pub load_embedded_runtime: bool,
    pub load_official_preact: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBinkUiDevSnapshotOptions {
    pub runtime_epoch: *const c_char,
    pub max_nodes: usize,
    pub max_depth: c_int,
    pub root_selector: *const c_char,
    pub include_screenshot: bool,
    pub inline_screenshot: bool,
    pub screenshot_file: *const c_char,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBinkDevToolsHttpOptions {
    pub bind_host: *const c_char,
    pub port: u16,
    pub auth_token: *const c_char,
    pub require_auth: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MBinkDevToolsHttpInfo {
    pub port: u16,
    pub url: *mut c_char,
    pub auth_token: *mut c_char,
}

pub type MBinkCallback = Option<unsafe extern "C" fn(*const c_char, *mut c_void) -> *mut c_char>;
pub type MBinkAsyncCallback =
    Option<unsafe extern "C" fn(*const c_char, *mut c_void) -> *mut c_char>;
pub type MBinkStateCallback =
    Option<unsafe extern "C" fn(*const c_char, *const c_char, *mut c_void)>;
pub type MBinkResizeCallback = Option<unsafe extern "C" fn(c_int, c_int, *mut c_void)>;
pub type MBinkVoidCallback = Option<unsafe extern "C" fn(*mut c_void)>;
pub type MBinkBoolCallback = Option<unsafe extern "C" fn(*mut c_void) -> bool>;
pub type MBinkUpdateCallback = Option<unsafe extern "C" fn(f32, *mut c_void)>;
pub type MBinkObserveCallback =
    Option<unsafe extern "C" fn(MBinkObserveKind, *const c_char, *mut c_void)>;

#[cfg(not(all(target_os = "windows", mbink_runtime_load)))]
extern "C" {
    pub fn mbink_init() -> c_int;
    pub fn mbink_cleanup();
    pub fn mbink_version() -> *const c_char;
    pub fn mbink_last_error() -> *const c_char;

    pub fn mbink_create(title: *const c_char, width: c_int, height: c_int) -> MBinkHandle;
    pub fn mbink_create_ex(config: *const MBinkConfig) -> MBinkHandle;
    pub fn mbink_default_config() -> MBinkConfig;
    pub fn mbink_destroy(handle: MBinkHandle);
    pub fn mbink_run(handle: MBinkHandle);
    pub fn mbink_stop(handle: MBinkHandle);
    pub fn mbink_poll_events(handle: MBinkHandle) -> bool;
    pub fn mbink_wait_events(handle: MBinkHandle) -> bool;
    pub fn mbink_default_runtime_options() -> MBinkRuntimeOptions;
    pub fn mbink_configure_runtime(
        handle: MBinkHandle,
        options: *const MBinkRuntimeOptions,
    ) -> c_int;
    pub fn mbink_load_embedded_runtime(handle: MBinkHandle, include_official_preact: bool)
        -> c_int;
    pub fn mbink_load_entry_file(
        handle: MBinkHandle,
        entry_path: *const c_char,
        execute_html_scripts: bool,
    ) -> c_int;
    pub fn mbink_load_module_file(handle: MBinkHandle, entry_path: *const c_char) -> c_int;
    pub fn mbink_render_frame(handle: MBinkHandle, passes: c_int) -> c_int;
    pub fn mbink_runtime_epoch(handle: MBinkHandle, out_epoch: *mut *mut c_char) -> c_int;
    pub fn mbink_lifecycle_state(handle: MBinkHandle) -> MBinkLifecycleState;
    pub fn mbink_lifecycle_reason(handle: MBinkHandle, out_reason: *mut *mut c_char) -> c_int;

    pub fn mbink_set_title(handle: MBinkHandle, title: *const c_char) -> c_int;
    pub fn mbink_tray_create(handle: MBinkHandle, tooltip: *const c_char) -> c_int;
    pub fn mbink_tray_destroy(handle: MBinkHandle) -> c_int;
    pub fn mbink_tray_set_tooltip(handle: MBinkHandle, tooltip: *const c_char) -> c_int;
    pub fn mbink_tray_set_menu(handle: MBinkHandle, menu_json: *const c_char) -> c_int;
    pub fn mbink_tray_set_left_click_callback(
        handle: MBinkHandle,
        callback: MBinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_tray_set_menu_callback(
        handle: MBinkHandle,
        callback: MBinkCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_set_size(handle: MBinkHandle, width: c_int, height: c_int) -> c_int;
    pub fn mbink_get_size(handle: MBinkHandle, width: *mut c_int, height: *mut c_int) -> c_int;
    pub fn mbink_set_position(handle: MBinkHandle, x: c_int, y: c_int) -> c_int;
    pub fn mbink_get_position(handle: MBinkHandle, x: *mut c_int, y: *mut c_int) -> c_int;
    pub fn mbink_set_min_size(handle: MBinkHandle, width: c_int, height: c_int) -> c_int;
    pub fn mbink_set_max_size(handle: MBinkHandle, width: c_int, height: c_int) -> c_int;
    pub fn mbink_show(handle: MBinkHandle) -> c_int;
    pub fn mbink_hide(handle: MBinkHandle) -> c_int;
    pub fn mbink_minimize(handle: MBinkHandle) -> c_int;
    pub fn mbink_maximize(handle: MBinkHandle) -> c_int;
    pub fn mbink_restore(handle: MBinkHandle) -> c_int;
    pub fn mbink_set_fullscreen(handle: MBinkHandle, fullscreen: bool) -> c_int;
    pub fn mbink_set_resizable(handle: MBinkHandle, resizable: bool) -> c_int;
    pub fn mbink_set_borderless(handle: MBinkHandle, borderless: bool) -> c_int;
    pub fn mbink_set_always_on_top(handle: MBinkHandle, on_top: bool) -> c_int;

    pub fn mbink_load_html(handle: MBinkHandle, html: *const c_char) -> c_int;
    pub fn mbink_load_html_file(handle: MBinkHandle, filepath: *const c_char) -> c_int;
    pub fn mbink_eval_js(handle: MBinkHandle, code: *const c_char) -> c_int;
    pub fn mbink_eval_module(
        handle: MBinkHandle,
        code: *const c_char,
        filename: *const c_char,
    ) -> c_int;
    pub fn mbink_load_js_file(handle: MBinkHandle, filepath: *const c_char) -> c_int;
    pub fn mbink_load_bytecode(handle: MBinkHandle, data: *const c_void, size: usize) -> c_int;
    pub fn mbink_compile_resources(
        input_path: *const c_char,
        output_file: *const c_char,
        encryption_key: *const c_char,
    ) -> c_int;
    pub fn mbink_load_resource_file(
        package_file: *const c_char,
        resource_path: *const c_char,
        encryption_key: *const c_char,
        out_data: *mut *mut c_void,
        out_size: *mut usize,
        out_flags: *mut u32,
    ) -> c_int;
    pub fn mbink_mount_resource_package(
        handle: MBinkHandle,
        package_file: *const c_char,
        encryption_key: *const c_char,
        mount_point: *const c_char,
    ) -> c_int;
    pub fn mbink_emit(
        handle: MBinkHandle,
        event_name: *const c_char,
        data_json: *const c_char,
    ) -> c_int;
    pub fn mbink_observe_set_callback(
        handle: MBinkHandle,
        callback: MBinkObserveCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_observe_console_json(handle: MBinkHandle, out_json: *mut *mut c_char) -> c_int;
    pub fn mbink_observe_errors_json(handle: MBinkHandle, out_json: *mut *mut c_char) -> c_int;
    pub fn mbink_observe_lifecycle_json(handle: MBinkHandle, out_json: *mut *mut c_char) -> c_int;
    pub fn mbink_observe_clear(handle: MBinkHandle, kind: MBinkObserveKind) -> c_int;
    pub fn mbink_state_create_null(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_create_bool(handle: MBinkHandle, name: *const c_char, value: bool) -> c_int;
    pub fn mbink_state_create_int(handle: MBinkHandle, name: *const c_char, value: i64) -> c_int;
    pub fn mbink_state_create_double(handle: MBinkHandle, name: *const c_char, value: f64)
        -> c_int;
    pub fn mbink_state_create_string(
        handle: MBinkHandle,
        name: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mbink_state_create_array(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_create_object(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_create_json(
        handle: MBinkHandle,
        name: *const c_char,
        json: *const c_char,
    ) -> c_int;

    pub fn mbink_bind(
        handle: MBinkHandle,
        name: *const c_char,
        callback: MBinkCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_bind_async(
        handle: MBinkHandle,
        name: *const c_char,
        callback: MBinkAsyncCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_unbind(handle: MBinkHandle, name: *const c_char);
    pub fn mbink_on_resize(
        handle: MBinkHandle,
        callback: MBinkResizeCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_on_close(
        handle: MBinkHandle,
        callback: MBinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_on_close_request(
        handle: MBinkHandle,
        callback: MBinkBoolCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_on_focus(
        handle: MBinkHandle,
        callback: MBinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_on_blur(
        handle: MBinkHandle,
        callback: MBinkVoidCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_on_update(
        handle: MBinkHandle,
        callback: MBinkUpdateCallback,
        user_data: *mut c_void,
    ) -> c_int;
